packages/CodingStandard/DotBlue/tests/valid/MethodVisibilityInInterface.php
<?php

namespace Foo;


interface Bar
{

	function foo();

}
