packages/CodingStandard/DotBlue/tests/invalid/MethodVisibilityInInterface.php
<?php

namespace Foo;


interface Bar
{

	public function foo();

}
